Fixes #35771 - wrap bookmarks in angular pages

--- a/engines/bastion/app/assets/stylesheets/bastion/bastion.scss
+++ b/engines/bastion/app/assets/stylesheets/bastion/bastion.scss
@@ -157,6 +157,10 @@
       margin-bottom: 20px;
     }
   }
+  [bst-bookmark] li a{
+    white-space: break-spaces;
+    overflow-wrap: anywhere;
+  }
 }
 
 .modal.fade.in {
